--- a/templates/admin.hbs
+++ b/templates/admin.hbs
@@ -290,6 +290,8 @@
                     <option>Keyboards</option>
                     <option>Mice</option>
                     <option>Speakers</option>
+                    <option>Woofer</option>
+                    <option>Other</option>
                   </select>
                 </div>
 
@@ -302,6 +304,7 @@
                     <option>Refurbished</option>
                     <option>Like New</option>
                     <option>Open Box</option>
+                     <option>Other</option>
                   </select>
                 </div>
 
@@ -353,6 +356,7 @@
                     <option>Micromax</option>
                     <option>Asus ROG</option>
                     <option>Black Shark</option>
+                    <option>Other</option>
                   </select>
                 </div>
 
