--- a/templates/user.hbs
+++ b/templates/user.hbs
@@ -370,15 +370,12 @@
     </ul>
 
     <!-- Logout Button -->
-    <a href="/logout" 
-       class="btn btn-danger mt-auto d-flex align-items-center justify-content-center gap-2">
-      <i class="bi bi-box-arrow-right"></i> Logout
-    </a>
+    <a href="/logout" class="btn btn-danger mt-auto d-flex align-items-center justify-content-center gap-2">
+  <i class="bi bi-box-arrow-right"></i> Logout
+</a>
   </div>
 </div>
 
-
-  
   <!-- Top Bar Messages -->
 <div id="topBar" class="bg-dark text-white text-center sticky-top" style="height:30px; z-index: 1030;">
   <div id="topBarMessages" 
