--- a/templates/admin.hbs
+++ b/templates/admin.hbs
@@ -170,10 +170,10 @@
     </ul>
     <hr />
     <!-- Logout -->
-    <a href="/logout" class="btn btn-sm btn-danger w-100">
-      <i class="bi bi-box-arrow-right"></i> <span>Logout</span>
-    </a>
-  </div>
+<a href="/admin/logout" class="btn btn-sm btn-danger w-100">
+  <i class="bi bi-box-arrow-right"></i> <span>Logout</span>
+</a>
+
 
   <!-- Main Content -->
   <div class="content" id="mainContent">
