--- a/templates/user.hbs
+++ b/templates/user.hbs
@@ -370,9 +370,11 @@
     </ul>
 
     <!-- Logout Button -->
-    <a href="/logout" class="btn btn-danger mt-auto d-flex align-items-center justify-content-center gap-2">
-  <i class="bi bi-box-arrow-right"></i> Logout
+   <!-- User Logout -->
+<a href="/user/logout" class="btn btn-sm btn-danger w-100">
+  <i class="bi bi-box-arrow-right"></i> <span>Logout</span>
 </a>
+
   </div>
 </div>
 
