--- a/templates/user.hbs
+++ b/templates/user.hbs
@@ -336,10 +336,11 @@
     <li class="nav-item"><a class="nav-link px-3" href="/about">About</a></li>
     <li class="nav-item"><a class="nav-link px-3" href="/blog">Blog</a></li>
     <li class="nav-item">
-      <a class="nav-link text-danger fw-semibold px-3" href="/">
-        <i class="bi bi-box-arrow-right me-1"></i> Logout
-      </a>
-    </li>
+  <a class="nav-link text-danger fw-semibold px-3" href="/user/logout">
+    <i class="bi bi-box-arrow-right me-1"></i> Logout
+  </a>
+</li>
+
   </ul>
 </div>
 
