--- a/templates/user.hbs
+++ b/templates/user.hbs
@@ -336,20 +336,15 @@
     <li class="nav-item"><a class="nav-link px-3" href="/about">About</a></li>
     <li class="nav-item"><a class="nav-link px-3" href="/blog">Blog</a></li>
     <li class="nav-item">
-  <a class="nav-link text-danger fw-semibold px-3" href="/user/logout">
-    <i class="bi bi-box-arrow-right me-1"></i> Logout
-  </a>
-</li>
-
+      <a class="nav-link text-danger fw-semibold px-3" href="/logout">
+        <i class="bi bi-box-arrow-right me-1"></i> Logout
+      </a>
+    </li>
   </ul>
 </div>
 
-  </div>
-</nav>
-
 <!-- OFFCANVAS MENU (Mobile Sidebar) -->
 <div class="offcanvas offcanvas-end bg-dark text-white" tabindex="-1" id="mobileMenu">
-  <!-- Header -->
   <div class="offcanvas-header border-bottom border-secondary">
     <h5 class="offcanvas-title mb-0">
       <span class="text-primary">Maximum</span> <span class="text-success">Gamers</span>
@@ -357,7 +352,6 @@
     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
 
-  <!-- Body -->
   <div class="offcanvas-body d-flex flex-column">
     <ul class="navbar-nav flex-grow-1">
       <li class="nav-item"><a class="nav-link text-white" href="/user">Home</a></li>
@@ -371,13 +365,12 @@
     </ul>
 
     <!-- Logout Button -->
-   <!-- User Logout -->
-<a href="/user/logout" class="btn btn-sm btn-danger w-100">
-  <i class="bi bi-box-arrow-right"></i> <span>Logout</span>
-</a>
-
+    <a href="/logout" class="btn btn-sm btn-danger w-100">
+      <i class="bi bi-box-arrow-right"></i> <span>Logout</span>
+    </a>
   </div>
 </div>
+
 
   <!-- Top Bar Messages -->
 <div id="topBar" class="bg-dark text-white text-center sticky-top" style="height:30px; z-index: 1030;">
