--- a/templates/about.hbs
+++ b/templates/about.hbs
@@ -61,7 +61,7 @@
   </div>
 </div>
 
-<!-- Embedded Google Map -->
+<!-- Embedded Google Map added -->
 <div class="text-center mt-4">
   <iframe 
     id="directionsMap"
